// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remote Schemas Add schema with @gql directive 1`] = `
Object {
  "updateSchemas": Object {
    "success": true,
  },
}
`;

exports[`Remote Schemas Add schema with @gql directive: gateway resource group 1`] = `
Array [
  Object {
    "schema": "type Query {
  foo: String
}
",
    "url": "http://remote-server/graphql",
  },
]
`;

exports[`Remote Schemas Add schema with @gql directive: registry resource group 1`] = `
Array [
  Object {
    "schema": "type Query {
  foo: String
}
",
    "url": "http://remote-server/graphql",
  },
]
`;

exports[`Remote Schemas Delete the schema with @gql directive 1`] = `
Object {
  "deleteSchemas": Object {
    "success": true,
  },
}
`;

exports[`Remote Schemas Query empty resource group: remote schema 1`] = `
Object {
  "remoteSchema": null,
}
`;

exports[`Remote Schemas Query empty resource group: remote schemas 1`] = `
Object {
  "remoteSchemas": Array [],
}
`;

exports[`Remote Schemas Query resource group after deletion: remote schema 1`] = `
Object {
  "remoteSchema": Object {
    "schema": "type Query {
  foo: Int
}
",
    "url": "http://remote-server/graphql",
  },
}
`;

exports[`Remote Schemas Query resource group after deletion: remote schemas 1`] = `
Object {
  "remoteSchemas": Array [
    Object {
      "schema": "type Query {
  foo: Int
}
",
      "url": "http://remote-server/graphql",
    },
  ],
}
`;

exports[`Remote Schemas Query resource group again: remote schema 1`] = `
Object {
  "remoteSchema": Object {
    "schema": "type Query {
  foo: Int
}
",
    "url": "http://remote-server/graphql",
  },
}
`;

exports[`Remote Schemas Query resource group: remote schema 1`] = `
Object {
  "remoteSchema": Object {
    "schema": "type Query {
  foo: String
}
",
    "url": "http://remote-server/graphql",
  },
}
`;

exports[`Remote Schemas Query resource group: remote schemas 1`] = `
Object {
  "remoteSchemas": Array [
    Object {
      "schema": "type Query {
  foo: String
}
",
      "url": "http://remote-server/graphql",
    },
  ],
}
`;

exports[`Remote Schemas Refresh remote schema 1`] = `
Object {
  "refreshRemoteSchema": Object {
    "success": true,
  },
}
`;

exports[`Remote Schemas Refresh remote schema: gateway resource group 1`] = `
Array [
  Object {
    "schema": "type Query {
  foo: Int
}
",
    "url": "http://remote-server/graphql",
  },
]
`;

exports[`Remote Schemas Refresh remote schema: registry resource group 1`] = `
Array [
  Object {
    "schema": "type Query {
  foo: Int
}
",
    "url": "http://remote-server/graphql",
  },
]
`;

exports[`Remote Schemas Try to refresh remote schema for non-exiting url 1`] = `
{
  "errors": [
    {
      "message": "Remote schema refresh request failed: Error: Unknown url: http://does-not-exist",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {
    "refreshRemoteSchema": null
  }
}
`;

exports[`Remote Schemas Try to refresh remote schema when there is no remote schemas at all 1`] = `
{
  "errors": [
    {
      "message": "Remote schema refresh request failed: Error: Unknown url: http://remote-server/graphql",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {
    "refreshRemoteSchema": null
  }
}
`;
